fix: stabilize chapter evidence validation